--- a/notebooks/01_ghcn_processing.ipynb
+++ b/notebooks/01_ghcn_processing.ipynb
@@ -3364,7 +3364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "475d6176-5dfa-484f-a97a-0d9cbaabfda3",
    "metadata": {},
    "outputs": [
@@ -3652,16 +3652,16 @@
     "dprintf(DEEBUG,f\"count smallDailydf: {smallDailydf.count()}\")\n",
     "\n",
     "\n",
-    "dprintf(DEEBUG, \"Q4(A) LEFT JOIN dailydf with stationEnriched\")\n",
+    "dprintf(DEEBUG, \"Q4(A) LEFT JOIN dailydf with enrichedStations\")\n",
     "\n",
     "dprintf(DEEBUG,f\"smallDailydf\")\n",
     "hprintf(DEEBUG, smallDailydf.limit(5))\n",
     "\n",
-    "dprintf(DEEBUG,f\"stationEnriched\")\n",
-    "hprintf(DEEBUG, stationEnriched.limit(5))\n",
+    "dprintf(DEEBUG,f\"enrichedStations\")\n",
+    "hprintf(DEEBUG, enrichedStations.limit(5))\n",
     "# Perform LEFT JOIN on station ID\n",
     "dailyStation = smallDailydf.join(\n",
-    "    stationEnriched,\n",
+    "    enrichedStations,\n",
     "    on=\"ID\",      # Join key: station ID\n",
     "    how=\"left_anti\"    # Keep all daily records, even if station info is missing\n",
     ")\n",
@@ -3679,27 +3679,27 @@
    "source": [
     "\n",
     "\n",
-    "dprintf(DEEBUG, \"Q3(E) Join stationStatedf with station_element_counts\")\n",
-    "pqtstationEnriched = f\"{prefixWrite}enriched-STATION\"\n",
-    "dprintf(DEEBUG,pqtstationEnriched)\n",
+    "dprintf(DEEBUG, \"Q3(E) Join stationStatedf with nStationsElements\")\n",
+    "pqtenrichedStations = f\"{prefixWrite}enriched-STATION\"\n",
+    "dprintf(DEEBUG,pqtenrichedStations)\n",
     "# Perform LEFT JOIN on station ID to attach element count data\n",
-    "stationEnriched = stationStatedf.join(\n",
-    "    station_element_counts,\n",
+    "enrichedStations = stationStatedf.join(\n",
+    "    nStationsElements,\n",
     "    on=\"ID\",         # Join key: station ID\n",
     "    how=\"left\"       # Retain all station metadata, even if no element info exists\n",
     ")\n",
     "\n",
-    "hprintf(DEEBUG, stationEnriched.limit(5))\n",
-    "s = f'Write join of stationStatedf and stationEnriched (count = {stationEnriched.count()}) as parquet:{pqtstationEnriched}'\n",
+    "hprintf(DEEBUG, enrichedStations.limit(5))\n",
+    "s = f'Write join of stationStatedf and enrichedStations (count = {enrichedStations.count()}) as parquet:{pqtenrichedStations}'\n",
     "dprintf(DEEBUG,s)\n",
     "if not 0:   \n",
     "    start = time.time()\n",
-    "    stationEnriched.write.mode(\"overwrite\").parquet(pqtstationEnriched)\n",
+    "    enrichedStations.write.mode(\"overwrite\").parquet(pqtenrichedStations)\n",
     "    stop  = time.time()\n",
-    "    print(pqtstationEnriched)\n",
+    "    print(pqtenrichedStations)\n",
     "    print(f\"written in {stop - start:.2f} seconds\")\n",
     "else:\n",
-    "    print(f\"DEEBUG: Not writing {pqtstationEnriched}\")\n",
+    "    print(f\"DEEBUG: Not writing {pqtenrichedStations}\")\n",
     "\n",
     "\n",
     "\n",
@@ -3710,7 +3710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "b4fd295a-4aab-4ff4-b0c8-fb8ef0dc1a04",
    "metadata": {},
    "outputs": [
@@ -3738,7 +3738,7 @@
    ],
    "source": [
     "\n",
-    "dprintf(DEEBUG, \"Q4(B) Count distinct daily station IDs not present in stationEnriched\")\n",
+    "dprintf(DEEBUG, \"Q4(B) Count distinct daily station IDs not present in enrichedStations\")\n",
     "\n",
     "\n",
     "daily_station_ids = smallDailydf.select(\"ID\").distinct()"
@@ -3832,14 +3832,14 @@
     "hprintf(DEEBUG,element_check.orderBy(\"ELEMENT\"))\n",
     "\n",
     "# Count distinct elements per station\n",
-    "station_element_counts = inventorydf.groupBy(\"ID\").agg(\n",
+    "nStationsElements = inventorydf.groupBy(\"ID\").agg(\n",
     "    F.countDistinct(\"ELEMENT\").alias(\"NUM_ELEMENTS\")\n",
     ")\n",
-    "dprintf(DEEBUG,\"station_element_counts:ID\")\n",
-    "hprintf(DEEBUG,station_element_counts.orderBy(\"ID\").limit(10))\n",
+    "dprintf(DEEBUG,\"nStationsElements:ID\")\n",
+    "hprintf(DEEBUG,nStationsElements.orderBy(\"ID\").limit(10))\n",
     "\n",
     "dprintf(DEEBUG,\"Total number of elements across all stations\")\n",
-    "total_element_count = station_element_counts.agg(\n",
+    "total_element_count = nStationsElements.agg(\n",
     "    F.sum(\"NUM_ELEMENTS\").alias(\"TOTAL_ELEMENTS\")\n",
     ")\n",
     "dprintf(DEEBUG,\"total_element_count\")\n",
@@ -3848,7 +3848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "e1bb3019-a061-43f7-a029-66889e1f1f91",
    "metadata": {},
    "outputs": [
@@ -4067,29 +4067,29 @@
    "source": [
     "dprintf(DEEBUG,\"Rename columns and assign the result back\")\n",
     "\n",
-    "dprintf(DEEBUG,\"station_element_counts:CORE = NUM_CORE_ELEMENTS,OTHER = NUM_OTHER_ELEMENTS\")\n",
-    "station_element_counts = station_element_counts \\\n",
+    "dprintf(DEEBUG,\"nStationsElements:CORE = NUM_CORE_ELEMENTS,OTHER = NUM_OTHER_ELEMENTS\")\n",
+    "nStationsElements = nStationsElements \\\n",
     "    .withColumnRenamed(\"CORE\", \"NUM_CORE_ELEMENTS\") \\\n",
     "    .withColumnRenamed(\"OTHER\", \"NUM_OTHER_ELEMENTS\")\n",
     "\n",
-    "hprintf(DEEBUG,station_element_counts.limit(5))\n",
+    "hprintf(DEEBUG,nStationsElements.limit(5))\n",
     "dprintf(DEEBUG,\"total_element_count\")\n",
     "\n",
-    "# Add column for total number of elements\n",
-    "#station_element_counts = station_element_counts.withColumn(\n",
+    "# total number of elements\n",
+    "#nStationsElements = nStationsElements.withColumn(\n",
     "#    \"NUM_ELEMENTS\",\n",
     "#    F.col(\"NUM_CORE_ELEMENTS\") + F.col(\"NUM_OTHER_ELEMENTS\")\n",
     "#)\n",
     "\n",
-    "# Preview the result\n",
-    "hprintf(DEEBUG,station_element_counts.limit(5))\n",
+    "\n",
+    "hprintf(DEEBUG,nStationsElements.limit(5))\n",
     "\n",
     "# Add column for total number of elements\n",
-    "total_element_count = station_element_counts.agg(\n",
+    "total_element_count = nStationsElements.agg(\n",
     "    F.sum(\"NUM_ELEMENTS\").alias(\"TOTAL_ELEMENTS\")\n",
     ")\n",
     "\n",
-    "# Preview the result\n",
+    "\n",
     "hprintf(DEEBUG,total_element_count)\n",
     "\n",
     "\n"
@@ -4158,7 +4158,7 @@
     "stations_full = us_stations_joined.unionByName(non_us_stations)\n",
     "hprintf(DEEBUG,stations_full.limit(5))\n",
     "\n",
-    "# Final preview\n",
+    "\n",
     "stations_select = stations_full.select(\"ID\", \"COUNTRY_CODE\", \"COUNTRY_NAME\", \"STATE\", \"STATE_NAME\")\n",
     "stations_select.orderBy(\"COUNTRY_CODE\", \"STATE\", \"ID\").show(10, truncate=False)\n",
     "hprintf(DEEBUG,stations_select.limit(5))"
@@ -4166,7 +4166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "7801a4f2-e119-47bb-9658-1e900f880530",
    "metadata": {},
    "outputs": [
@@ -4185,9 +4185,9 @@
    "source": [
     "# --- Q4(a): Check for missing stations in daily ---\n",
     "\n",
-    "# Perform LEFT JOIN between daily and stations_enriched (from Q3e)\n",
-    "daily_missing_joined = dailydf.join(\n",
-    "    stations_enriched,  # from Q3(e)\n",
+    "# Perform LEFT JOIN between daily and enrichedStations (from Q3e)\n",
+    "joinedMissingData = dailydf.join(\n",
+    "    enrichedStations,  # from Q3(e)\n",
     "    on=\"ID\",\n",
     "    how=\"left\"\n",
     ")\n",
@@ -4195,23 +4195,59 @@
     "# Filter for rows where station information is missing after join\n",
     "missing_stations = daily_missing_joined.filter(col(\"COUNTRY_CODE\").isNull())\n",
     "\n",
-    "# Display distinct station IDs missing from stations\n",
+    "#  distinct station IDs missing from stations\n",
     "missing_station_ids = missing_stations.select(\"ID\").distinct().orderBy(\"ID\")\n",
     "hprintf(DEEBUG,missing_station_ids.limit(20))\n",
     "\n",
     "# Count how many station IDs are missing\n",
-    "dprintf(DEEBUG,\"Total stations in daily not found in stations_enriched:\",\n",
+    "dprintf(DEEBUG,\"Total stations in daily not found in enrichedStations:\",\n",
     "      missing_station_ids.count())\n",
     "\n",
     "# Reuse filtered DataFrame from Q4(a)\n",
     "unmatched_station_count = missing_station_ids.count()\n",
     "\n",
-    "dprintf(DEEBUG,\"Number of distinct stations in daily not present in stations_enriched:\", unmatched_station_count)\n"
+    "dprintf(DEEBUG,\"Number of distinct stations in daily not present in enrichedStations:\", unmatched_station_count)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
+   "id": "14f838ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import lit  # DEE: CELL 20 \n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Count the number of records in each metadata DataFrame\n",
+    "nStations = stationsdf.count()\n",
+    "nStates    = statesdf.count()\n",
+    "nCountries = countriesdf.count()\n",
+    "nInventory = inventorydf.count()\n",
+    "\n",
+    "# Print the counts\n",
+    "print(\"Stations count: \", nStations)\n",
+    "print(\"States count: \", nStates)\n",
+    "print(\"Countries count: \", nCountries)\n",
+    "print(\"Inventory count: \", inventory_count)\n",
+    "\n",
+    "# Plot the results\n",
+    "labels = [\"stationsdf\", \"statesdf\", \"countriesdf\", \"inventorydf\"]\n",
+    "values = [nStations, nStates, nCountries, nInventory]\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.bar(labels, values)\n",
+    "plt.title(\"Q1(b)  counts for GHCN meta data in tabel\")\n",
+    "plt.ylabel(\"Row Count\")\n",
+    "plt.xlabel(\"DataFrame Name\")\n",
+    "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7440e110-9daf-4e3c-bb64-02e9d2e005c0",
    "metadata": {},
    "outputs": [
@@ -4228,13 +4264,13 @@
     }
    ],
    "source": [
-    "stations_enriched = stations_select.join(\n",
-    "    station_element_counts,\n",
+    "enrichedStations = stations_select.join(\n",
+    "    nStationsElements,\n",
     "    on=\"ID\",\n",
     "    how=\"left\"\n",
     ")\n",
     "\n",
-    "hprintf(DEEBUG,stations_enriched.limit(5))"
+    "dhtmlf(DEEBUG,enrichedStations.limit(5))"
    ]
   },
   {
