01_ghcn2_explore.ipynb v1

--- a/notebooks/00_ghcn_setup.ipynb
+++ b/notebooks/00_ghcn_setup.ipynb
@@ -237,21 +237,17 @@
     "DEEBUG = True\n",
     "\n",
     "\n",
-    "def dprintf(flag: bool, msg: str):\n",
-    "    if flag:\n",
-    "        print(msg)\n",
+    "def dprintf(b: bool, s: str):\n",
+    "     \"\"\"conditional print of str\n",
+    "     \"\"\"\n",
+    "    if b:\n",
+    "        print(s)\n",
     "\n",
-    "def hprintf(flag: bool,df, n=20):\n",
-    "    \"\"\"Leverage existing pandas jupyter integration to show a spark dataframe as html.\n",
-    "    \n",
-    "    Args:\n",
-    "        n (int): number of rows to show (default: 20)\n",
-    "    \"\"\"\n",
-    "    if flag: \n",
-    "        display(df.limit(n).toPandas())  \n",
-    "        \n",
-    "        \n",
-    "              "
+    "def hprintf(b: bool, df, n=20):\n",
+    "     \"\"\"conditional html of df  \n",
+    "     \"\"\"\n",
+    "    if b: \n",
+    "        display(df.limit(n).toPandas())  "
    ]
   },
   {
