--- a/notebooks/01_ghcn2_explore.ipynb
+++ b/notebooks/01_ghcn2_explore.ipynb
@@ -856,10 +856,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "673ec9e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'prefixWrite' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 13\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# CELL 7 Q3(F): Build and Save Enriched Stations Table  \u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# CELL 7 Q3(F): \u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# ------------------------------------------------\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m#  \u001b[39;00m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m#  \u001b[39;00m\n\u001b[1;32m---> 13\u001b[0m pqtEnrichedStations \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mprefixWrite\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/stations_enriched.parquet\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;66;03m# Join 1: Add COUNTRYNAME from countriesdf\u001b[39;00m\n\u001b[0;32m     17\u001b[0m dprintf(DEEBUG, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstationsdf before join with countriesdf\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'prefixWrite' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# CELL 7 Q3(F): Build and Save Enriched Stations Table  \n",
     "# CELL 7 Q3(F): \n",
