--- a/notes/20250405 report.tex
+++ b/notes/20250405 report.tex
@@ -16,13 +16,7 @@
 \usepackage{float}
 \usepackage{placeins}
 \usepackage{appendix}
-
-\usepackage{fontspec}
-\usepackage{fancyhdr}
 \usepackage{flextable}
-\geometry{a4paper, margin=2.5cm}
-\setmainfont{Arial}
-
 \usepackage[style=apa,backend=biber]{biblatex}
 \addbibresource{ghcnd.bib}
 \setmainfont{Arial} % Or another sans-serif font you’re using
@@ -264,9 +258,38 @@ Q3(E-join) & Join classification to enriched metadata & \textbf{✓} & CELL 13 \
 \hline
 \end{flextable}
 
+\section*{Summary of Completed Analysis Steps}
 
-
-
+\begin{table}[H]
+    \centering
+    \caption{Completed Analysis Steps in \texttt{02\_ghcn2\_analysis.ipynb}}
+    \begin{tabularx}{\textwidth}{|c|c|X|}
+    \hline
+    \textbf{Cell} & \textbf{Step} & \textbf{Description} \\
+    \hline
+    CELL 2   & Q1(a.1) & Total number of stations \\
+    CELL 3   & Q1(a.2) & Stations active in 2025 \\
+    CELL 4   & Q1(a.3) & Stations in GSN, HCN, CRN \\
+    CELL 5   & Q1(a.4) & Stations in more than one network \\
+    CELL 6   & Q1(b.1) & Stations in Southern Hemisphere \\
+    CELL 7   & Q1(b.2) & Stations in US territories (excluding US) \\
+    CELL 8   & Q1(c.1) & Station counts per country \\
+    CELL 9   & Q1(c.2) & Station counts per US state \\
+    \hline
+    CELL 10  & Q2(a.1) & Define \texttt{geoDistanceUDF()} \\
+    CELL 11  & Q2(a.2) & Test UDF on 3-station CROSS JOIN \\
+    CELL 12  & Q2(b.1) & Pairwise distances between NZ stations \\
+    CELL 13  & Q2(b.2) & Closest pair of NZ stations \\
+    \hline
+    CELL 14A & –       & Load full \texttt{daily} dataset from Azure \\
+    CELL 14  & Q3(a.1) & Count total rows in \texttt{daily} \\
+    CELL 15  & Q3(b.1) & Count of core element observations \\
+    CELL 16  & Q3(b.2) & Core element with most observations \\
+    CELL 17  & Q3(c.1) & TMAX observations without TMIN \\
+    CELL 18  & Q3(c.2) & Unique stations with orphaned TMAX \\
+    \hline
+    \end{tabularx}
+    \end{table}
 
 
 
