added write of files needed for visulaisation

--- a/notebooks/02_ghcn2_analysis.ipynb
+++ b/notebooks/02_ghcn2_analysis.ipynb
@@ -315,31 +315,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "530bf277",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# CELL 7 Q1(b.2): – Stations in US Territories (excluding United States)\n",
-    "# CELL 7 Q1(b.2): \n",
-    "# ------------------------------------------------\n",
-    "# Summary:\n",
-    "# - filter by COUNTRY_NAME containing \"United States\" but not equal to \"United States\"\n",
-    "# - count distinct station IDs\n",
-    "\n",
-    "#  \n",
-    "\n",
-    "territorydf = stationsEnricheddf.filter(\n",
-    "    (col(\"COUNTRY_NAME\").like(\"%United States%\")) & (col(\"COUNTRY_NAME\") != \"United States\")\n",
-    ")\n",
-    "\n",
-    "nUSTerritories = territorydf.select(\"ID\").distinct().count()\n",
-    "\n",
-    "dprintf(1, f\"Stations in US Territories (excluding United States): {nUSTerritories}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "516ad40e",
    "metadata": {},
    "outputs": [],
@@ -381,7 +356,27 @@
     "nUSTerritories = territoryStationsdf.select(\"ID\").distinct().count()\n",
     "\n",
     "dprintf(1, f\"Stations in US Territories (excluding United States): {nUSTerritories}\")\n",
-    "\n"
+    "\n",
+    "\n",
+    "# ------------------------------------------------\n",
+    "# Save: stationsCountriesdf to Parquet\n",
+    "\n",
+    "pqtStationsCountries = f\"{prefixWrite}/stations_countries.parquet\"\n",
+    "\n",
+    "dprintf(DEEBUG, f\"write to : {pqtStationsCountries}\")\n",
+    "\n",
+    "\n",
+    "if not 0:\n",
+    "    start = time.time()\n",
+    "    stationsCountriesdf.write.mode(\"overwrite\").parquet(pqtStationsCountries)\n",
+    "    stop = time.time()\n",
+    "    dprintf(1, f\"complete in {stop - start:.2f} seconds\")\n",
+    "    dprintf(1, f\"stationsCountriesdf = {stationsCountriesdf.count()}\")\n",
+    "else:\n",
+    "    dprintf(1, f\"DEEBUG = 1, no write to : {pqtStationsCountries}\")\n",
+    "\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -414,7 +409,23 @@
     ").select(\"CODE\", \"COUNTRY_NAME\", \"nStations\").orderBy(\"nStations\", ascending=False)\n",
     "\n",
     "dprintf(1, f\"Total countries with stations: {countryStationCountsdf.count()}\")\n",
-    "countryStationCountsdf.show(10, truncate=False)"
+    "countryStationCountsdf.show(10, truncate=False)\n",
+    "\n",
+    "# ------------------------------------------------\n",
+    "# Save: countryStationCountsdf to Parquet\n",
+    "\n",
+    "pqtCountryCounts = f\"{prefixWrite}/country_station_counts.parquet\"\n",
+    "\n",
+    "dprintf(DEEBUG, f\"write to : {pqtCountryCounts}\")\n",
+    "\n",
+    "if not 0:\n",
+    "    start = time.time()\n",
+    "    countryStationCountsdf.write.mode(\"overwrite\").parquet(pqtCountryCounts)\n",
+    "    stop = time.time()\n",
+    "    dprintf(1, f\"complete in {stop - start:.2f} seconds\")\n",
+    "    dprintf(1, f\"countryStationCountsdf.count() = {countryStationCountsdf.count()}\")\n",
+    "else:\n",
+    "    dprintf(1, f\"DEEBUG = 1, no write to : {pqtCountryCounts}\")\n"
    ]
   },
   {
@@ -445,7 +456,7 @@
     "\n",
     "dprintf(2, \"statesdf created\")\n",
     "\n",
-    "# join with stationsEnricheddf (not stationsCountriesdf!)\n",
+    "# join with stationsEnricheddf\n",
     "stateCountsdf = stationsEnricheddf.join(\n",
     "    statesdf,\n",
     "    stationsEnricheddf.STATE == statesdf.CODE,\n",
@@ -458,7 +469,23 @@
     "    .orderBy(\"nStations\", ascending=False)\n",
     "\n",
     "dprintf(1, f\"Total US states with stations: {stateStationCountsdf.count()}\")\n",
-    "stateStationCountsdf.show(10, truncate=False)\n"
+    "stateStationCountsdf.show(10, truncate=False)\n",
+    "\n",
+    "# ------------------------------------------------\n",
+    "# Save: stateStationCountsdf to Parquet\n",
+    "\n",
+    "pqtStateCounts = f\"{prefixWrite}/state_station_counts.parquet\"\n",
+    "\n",
+    "dprintf(DEEBUG, f\"write to : {pqtStateCounts}\")\n",
+    "\n",
+    "if not 0:\n",
+    "    start = time.time()\n",
+    "    stateStationCountsdf.write.mode(\"overwrite\").parquet(pqtStateCounts)\n",
+    "    stop = time.time()\n",
+    "    dprintf(1, f\"complete in {stop - start:.2f} seconds\")\n",
+    "    dprintf(1, f\"stateStationCountsdf.count() = {stateStationCountsdf.count()}\")\n",
+    "else:\n",
+    "    dprintf(1, f\"DEEBUG = 1, no write to : {pqtStateCounts}\")\n"
    ]
   },
   {
@@ -575,6 +602,8 @@
     "\n",
     "hprintf(\"Q2(b.1): Pairwise distances between stations in New Zealand\")\n",
     "\n",
+    "start = time.time()\n",
+    "\n",
     "# filter NZ stations\n",
     "nzStationsdf = stationsCountriesdf.filter(\"COUNTRY == 'NZ'\") \\\n",
     "    .select(\"ID\", \"NAME\", \"LATITUDE\", \"LONGITUDE\").distinct()\n",
@@ -603,8 +632,26 @@
     "        col(\"DistanceKM\")\n",
     "    )\n",
     "\n",
+    "stop = time.time()\n",
+    "\n",
     "dprintf(1, f\"NZ station pairs: {nzStationDistancesdf.count()}\")\n",
-    "nzStationDistancesdf.show(10, truncate=False)\n"
+    "dprintf(1, f\"Q2(b.1) complete in {stop - start:.2f} seconds\")\n",
+    "\n",
+    "# ------------------------------------------------\n",
+    "# Save: nzStationDistancesdf to Parquet\n",
+    "\n",
+    "pqtNZDistances = f\"{prefixWrite}/nz_station_distances.parquet\"\n",
+    "\n",
+    "dprintf(DEEBUG, f\"write to : {pqtNZDistances}\")\n",
+    "\n",
+    "if not 0:\n",
+    "    start = time.time()\n",
+    "    nzStationDistancesdf.write.mode(\"overwrite\").parquet(pqtNZDistances)\n",
+    "    stop = time.time()\n",
+    "    dprintf(1, f\"complete in {stop - start:.2f} seconds\")\n",
+    "    dprintf(1, f\"nzStationDistancesdf.count() = {nzStationDistancesdf.count()}\")\n",
+    "else:\n",
+    "    dprintf(1, f\"DEEBUG = 1, no write to : {pqtNZDistances}\")\n"
    ]
   },
   {
@@ -701,7 +748,23 @@
     "\n",
     "dprintf(DEEBUG, \"Core element counts:\")\n",
     "hprintf(DEEBUG, coreElementCountsdf.show(5))\n",
-    "dprintf(1, f\"coreElementCountsdf.count() = {coreElementCountsdf.count()}\")\n"
+    "dprintf(1, f\"coreElementCountsdf.count() = {coreElementCountsdf.count()}\")\n",
+    "\n",
+    "# ------------------------------------------------\n",
+    "# Save: coreElementCountsdf to Parquet\n",
+    "\n",
+    "pqtCoreCounts = f\"{prefixWrite}/core_element_counts.parquet\"\n",
+    "\n",
+    "dprintf(DEEBUG, f\"write to : {pqtCoreCounts}\")\n",
+    "\n",
+    "if not 0:\n",
+    "    start = time.time()\n",
+    "    coreElementCountsdf.write.mode(\"overwrite\").parquet(pqtCoreCounts)\n",
+    "    stop = time.time()\n",
+    "    dprintf(1, f\"complete in {stop - start:.2f} seconds\")\n",
+    "    dprintf(1, f\"coreElementCountsdf.count() = {coreElementCountsdf.count()}\")\n",
+    "else:\n",
+    "    dprintf(1, f\"DEEBUG = 1, no write to : {pqtCoreCounts}\")\n"
    ]
   },
   {
