update 01 move c15 forward

--- a/notebooks/01_ghcn2_explore.ipynb
+++ b/notebooks/01_ghcn2_explore.ipynb
@@ -556,32 +556,119 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "2744cf47",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed435aab",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Q2 (a)\n",
-    "Schema for `daily` based on  GHCN Daily README"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d87923b1",
-   "metadata": {},
-   "source": [
-    "## Q2 Load and Parse GHCN Datasets\n",
+    "# CELL 15 Q1: – Inspect Azure HDFS layout and daily folder contents\n",
+    "# CELL 15 Q1: \n",
+    "# ------------------------------------------------\n",
+    "# Summary:\n",
+    "# - PART 1: list contents under {prefix}\n",
+    "# - PART 2: human-readable size info under {prefix}\n",
+    "# - PART 3: HDFS block and file count for prefixDaily\n",
+    "# - PART 4: list and format daily file entries\n",
     "\n",
-    "This section defines schemas and parses the raw GHCN datasets using fixed-width column specifications for metadata tables and inferred schema for daily records."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "10ed5d75",
-   "metadata": {},
-   "source": [
-    "### Q2(a) Define Schema for Daily\n",
+    "#  A last minute attempt to do what James had challenged the class with.\n",
     "\n",
-    "Define the schema using PySpark types for the daily data format."
+    "hprintf(\"Q1:  Azure HDFS layout  daily folder \")\n",
+    "\n",
+    "# --- PART 1: directory listing ---\n",
+    "dprintf(DEEBUG, \"--- PART 1 ---\")\n",
+    "start = time.time()\n",
+    "\n",
+    "lines_ls = !hdfs dfs -ls {prefix}\n",
+    "parsed_ls = []\n",
+    "\n",
+    "for line in lines_ls:\n",
+    "    line = line.strip()\n",
+    "    if not line or line.startswith(\"INFO\") or line.startswith(\"WARN\") or \"Found\" in line:\n",
+    "        continue\n",
+    "\n",
+    "    parts = line.split()\n",
+    "    if len(parts) >= 2:\n",
+    "        perms     = parts[0]\n",
+    "        full_path = parts[-1]\n",
+    "\n",
+    "        if perms.startswith(\"-\") or perms.startswith(\"d\"):\n",
+    "            rel_path = full_path.replace(prefix, '')\n",
+    "            parsed_ls.append((perms, rel_path))\n",
+    "\n",
+    "for perms, name in parsed_ls:\n",
+    "    dprintf(DEEBUG, f\"{perms:<12} {name}\")\n",
+    "\n",
+    "stop = time.time()\n",
+    "dprintf(DEEBUG, f\"complete in {stop - start:.2f} seconds\")g\n",
+    "# --- PART 2: du -h (size info) ---\n",
+    "dprintf(DEEBUG, \"--- PART 2 ---\")\n",
+    "start = time.time()\n",
+    "\n",
+    "lines = !hdfs dfs -du -h {prefix}\n",
+    "parsed_du = []\n",
+    "\n",
+    "for line in lines:\n",
+    "    if line.startswith(\"INFO\") or line.startswith(\"WARN\"):\n",
+    "        continue\n",
+    "\n",
+    "    parts = line.split()\n",
+    "    if len(parts) >= 5:\n",
+    "        size1    = f\"{parts[0]} {parts[1]}\"\n",
+    "        size2    = f\"{parts[2]} {parts[3]}\"\n",
+    "        full_path = parts[4]\n",
+    "    elif len(parts) >= 3:\n",
+    "        size1, size2, full_path = parts[0], parts[1], parts[2]\n",
+    "    else:\n",
+    "        continue\n",
+    "\n",
+    "    rel_path = full_path.replace(prefix, '')\n",
+    "    parsed_du.append((rel_path, size1, size2))\n",
+    "\n",
+    "for name, size1, size2 in parsed_du:\n",
+    "    dprintf(DEEBUG, f\"{name:<25} {size1:<7} {size2:<7}\")\n",
+    "\n",
+    "stop = time.time()\n",
+    "dprintf(DEEBUG, f\"complete in {stop - start:.2f} seconds\")\n",
+    "\n",
+    "# --- PART 3: HDFS file count ---\n",
+    "dprintf(DEEBUG, \"--- PART 3 ---\")\n",
+    "start = time.time()\n",
+    "\n",
+    "!hdfs dfs -count {prefixDaily}\n",
+    "\n",
+    "stop = time.time()\n",
+    "dprintf(DEEBUG, f\"complete in {stop - start:.2f} seconds\")\n",
+    "\n",
+    "# --- PART 4: list daily files ---\n",
+    "dprintf(DEEBUG, \"--- PART 4 ---\")\n",
+    "start = time.time()\n",
+    "\n",
+    "lines_daily = !hdfs dfs -ls {prefixDaily}\n",
+    "parsed_daily = []\n",
+    "\n",
+    "for line in lines_daily:\n",
+    "    line = line.strip()\n",
+    "    if not line or \"INFO\" in line or \"WARN\" in line or \"Found\" in line:\n",
+    "        continue\n",
+    "\n",
+    "    parts = line.split()\n",
+    "    if len(parts) == 6:\n",
+    "        size      = parts[2]\n",
+    "        full_path = parts[5]\n",
+    "        file_name = full_path.rsplit('/', 1)[-1]\n",
+    "        parsed_daily.append((size, file_name))\n",
+    "    else:\n",
+    "        dprintf(DEEBUG, f\"(wrong format): {line}\")\n",
+    "\n",
+    "if parsed_daily:\n",
+    "    for size, name in parsed_daily:\n",
+    "        dprintf(DEEBUG, f\"{name:<15} {size}\")\n",
+    "else:\n",
+    "    dprintf(DEEBUG, \"none found.\")\n",
+    "\n",
+    "stop = time.time()\n",
+    "dprintf(DEEBUG, f\"complete in {stop - start:.2f} seconds\")\n"
    ]
   },
   {
