nasty bug solved

--- a/notebooks/00_ghcn_setup.ipynb
+++ b/notebooks/00_ghcn_setup.ipynb
@@ -236,18 +236,16 @@
    "source": [
     "DEEBUG = True\n",
     "\n",
-    "\n",
     "def dprintf(b: bool, s: str):\n",
-    "     \"\"\"conditional print of str\n",
-    "     \"\"\"\n",
+    "    \"\"\"Conditional print of str\"\"\"\n",
     "    if b:\n",
     "        print(s)\n",
     "\n",
     "def hprintf(b: bool, df, n=20):\n",
-    "     \"\"\"conditional html of df  \n",
-    "     \"\"\"\n",
-    "    if b: \n",
-    "        display(df.limit(n).toPandas())  "
+    "    \"\"\"Conditional HTML display of Spark DataFrame\"\"\"\n",
+    "    if b:\n",
+    "        display(df.limit(n).toPandas())\n",
+    "  "
    ]
   },
   {
