--- a/notebooks/00_ghcn2_setup.ipynb
+++ b/notebooks/00_ghcn2_setup.ipynb
@@ -20,7 +20,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "8b0458a4-22bc-4295-8f3e-c74f8dd31182",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CELL 0: Reset Kernel State\n",
+    "# CELL 0: \n",
+    "# ------------------------------------------------\n",
+    "# Summary:\n",
+    "# - clear all existing variables and definitions \n",
+    "# - annoying to deebug without it\n",
+    "\n",
+    "#  \n",
+    "%reset -f\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "017705b0-281d-4565-abe1-852ebc5ca888",
    "metadata": {
     "scrolled": true
@@ -227,74 +245,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "46817cd2-d6d0-49b4-a97a-21881d5bb3e1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DEEBUG = True\n",
+    "# CELL 1: my common definitions  \n",
+    "# CELL 1: \n",
+    "# ------------------------------------------------\n",
+    "import traceback \n",
+    "\n",
+    "DEEBUG = True  #override at any point in the cells\n",
     "\n",
     "def dprintf(b: bool, s: str):\n",
     "    \"\"\"Conditional print of str\"\"\"\n",
     "    if b:\n",
     "        print(s)\n",
     "\n",
-    "def hprintf(b: bool, df, n=20):\n",
-    "    \"\"\"Conditional HTML display of Spark DataFrame\"\"\"\n",
-    "    if b:\n",
+    "def hprintf(b: bool, df, n=5):\n",
+    "    \"\"\"Conditional print of top rows in Spark DataFrame (safe for large datasets)\"\"\"\n",
+    "    dprintf(1,\"hprintf start\")\n",
+    "    if b:            \n",
+    "        print(\"bool = 1\")\n",
+    "        dprintf(1, f\"hprintf: show top {n} rows\")\n",
+    "        df.printSchema()\n",
+    "        #df.limit(n).show(truncate=False)\n",
     "        display(df.limit(n).toPandas())\n",
-    "\n",
-    "def textRead(b: bool, fn: str):  # fn = filename\n",
-    "    dprintf(1, f\"filename: {fn}\")\n",
-    "    \n",
-    "    if not b:\n",
-    "        start = time.time()\n",
-    "        result = spark.read.text(fn)\n",
-    "        stop = time.time()\n",
-    "        dprintf(1, f\"complete in {stop - start:.2f} seconds\")\n",
-    "        dprintf(1, f\"result.count() = {result.count()}\")\n",
-    "        return result\n",
     "    else:\n",
-    "        dprintf(1, f\"bool = 1, no read from: {fn}\")\n",
+    "        print(\"bool = 0\")\n",
+    "    dprintf(1,\"hprintf end\")\n",
+    "\n",
+    "\n",
+    "def dReadTEXT(b: bool, path: str, show: int = 5):\n",
+    "    try:\n",
+    "        \n",
+    "        if b:\n",
+    "            dprintf(1, f\"bool = 1, read file from: {path}\")\n",
+    "            start = time.time()\n",
+    "            result = spark.read.text(path)\n",
+    "            stop = time.time()\n",
+    "            hprintf(1, result, show)\n",
+    "            dprintf(1, f\"completed in {stop - start:.2f} seconds\")\n",
+    "            count =  result.count()\n",
+    "            dprintf(1, f\"result.count() = {count}\")\n",
+    "            return result\n",
+    "        else:\n",
+    "            dprintf(1, f\"bool = 0, read NO file from: {path}\")\n",
+    "            return None\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(\"❌ Error caught:\", type(e), e)\n",
+    "        traceback.print_exc()\n",
+    "        return None\n",
+    "\n",
+    "\n",
+    "from pyspark.sql.types import StructType\n",
+    "\n",
+    "def dReadCSV(b: bool = 1, path: str = \"\", bHeader: bool = False, schema: StructType = None, show: int = 5):\n",
+    "    try:\n",
+    "  \n",
+    "       \n",
+    "        if schema:\n",
+    "            dprintf(1, f\"schema: {schema.simpleString()}\")\n",
+    "        else:\n",
+    "            dprintf(1, \"no schema\")\n",
+    "\n",
+    "        if b:\n",
+    "            dprintf(1, f\"bool = 1, read file from: {path}\")\n",
+    "            start = time.time()\n",
+    "            result = spark.read \\\n",
+    "                .option(\"header\", bool(bHeader)) \\\n",
+    "                .schema(schema) \\\n",
+    "                .csv(path) \\\n",
+    "                .repartition(8)  # leave this for now\n",
+    "\n",
+    "            stop = time.time()\n",
+    "            dprintf(1, f\"complete in {stop - start:.2f} seconds\")\n",
+    "            hprintf(1, result, show)\n",
+    "            count = result.count()\n",
+    "            dprintf(1, f\"result.count() = {count}\")\n",
+    "            return result\n",
+    "\n",
+    "        else:\n",
+    "            dprintf(1, f\"bool = 1, read NO file from: {path}\")\n",
+    "            return None\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(\"❌ Error caught:\", type(e), e)\n",
+    "        traceback.print_exc()\n",
+    "        return None\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "cda12fa7-d929-468c-bccd-26118ef34429",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CELL 1: my common definitions  \n",
+    "# CELL 1: \n",
+    "# ------------------------------------------------\n",
+    "import traceback\n",
+    "import time\n",
+    "from pyspark.sql.types import StructType\n",
+    "\n",
+    "DEEBUG = True  # override at any point in the cells\n",
+    "\n",
+    "def dprintf(b: bool, s: str):\n",
+    "    \"\"\"Conditional print of str\"\"\"\n",
+    "    if b:\n",
+    "        print(s)\n",
+    "\n",
+    "def hprintf(b: bool, df, n=5):\n",
+    "    \"\"\"Conditional print of top rows in Spark DataFrame (safe for large datasets)\"\"\"\n",
+    "    dprintf(1, \"hprintf start\")\n",
+    "    if b:\n",
+    "        dprintf(1, f\"hprintf: show top {n} rows\")\n",
+    "        df.printSchema()\n",
+    "        display(df.limit(n).toPandas())  # safe in Jupyter only\n",
+    "    else:\n",
+    "        print(\"bool = 0\")\n",
+    "    dprintf(1, \"hprintf end\")\n",
+    "\n",
+    "def dReadTEXT(b: bool, path: str):\n",
+    "    try:\n",
+    "        dprintf(1, f\"path: {path}\")\n",
+    "        if b:\n",
+    "            dprintf(1, f\"bool = 1, read file from: {path}\")\n",
+    "            start = time.time()\n",
+    "            result = spark.read.text(path)\n",
+    "            stop = time.time()\n",
+    "            hprintf(1, result)\n",
+    "            dprintf(1, f\"completed in {stop - start:.2f} seconds\")\n",
+    "            dprintf(1, f\"result.count() = {result.count()}\")\n",
+    "            return result\n",
+    "        else:\n",
+    "            dprintf(1, f\"bool = 0, read NO file from: {path}\")\n",
+    "            return None\n",
+    "    except Exception as e:\n",
+    "        print(\"❌ Error caught:\", type(e), e)\n",
+    "        traceback.print_exc()\n",
+    "        return None\n",
+    "\n",
+    "def dReadCSV(b: bool = 1, path: str = \"\", bHeader: bool = False, schema: StructType = None, show: int = 5):\n",
+    "    try:\n",
+    "        dprintf(1, f\"path: {path}\")\n",
+    "\n",
+    "        if schema:\n",
+    "            dprintf(1, f\"schema: {schema.simpleString()}\")\n",
+    "        else:\n",
+    "            dprintf(1, \"no schema\")\n",
+    "\n",
+    "        if b:\n",
+    "            start = time.time()\n",
+    "            result = spark.read \\\n",
+    "                .option(\"header\", bool(bHeader)) \\\n",
+    "                .schema(schema) \\\n",
+    "                .csv(path) \\\n",
+    "                .repartition(8)  # leave this for now\n",
+    "\n",
+    "            stop = time.time()\n",
+    "            hprintf(1, result, show)\n",
+    "            dprintf(1, f\"complete in {stop - start:.2f} seconds\")\n",
+    "            count = result.count()\n",
+    "            dprintf(1, f\"result.count() = {count}\")\n",
+    "            return result\n",
+    "        else:\n",
+    "            dprintf(1, f\"bool = 0, read NO file from: {path}\")\n",
+    "            return None\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(\"❌ Error caught:\", type(e), e)\n",
+    "        traceback.print_exc()\n",
     "        return None\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "f06343f5-a638-4f7f-ade5-5f564a068bc0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning: Ignoring non-Spark config property: fs.azure.sas.campus-user.madsstorage002.blob.core.windows.net\n",
-      "Warning: Ignoring non-Spark config property: SPARK_DRIVER_BIND_ADDRESS\n",
-      "25/04/01 23:30:05 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "25/04/01 23:30:05 WARN Utils: Service 'sparkDriver' could not bind on port 7077. Attempting port 7078.\n",
-      "25/04/01 23:30:06 WARN Utils: Service 'SparkUI' could not bind on port 4044. Attempting port 4045.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<p><b>Spark</b></p><p>The spark session is <b><span style=\"color:green\">active</span></b>, look for <code>dew59 (notebook)</code> under the running applications section in the Spark UI.</p><ul><li><a href=\"http://localhost:4045\" target=\"_blank\">Spark Application UI</a></li></ul><p><b>Config</b></p><table width=\"100%\" style=\"width:100%; font-family: monospace;\"><tr><td style=\"text-align:left;\">spark.app.startTime</td><td>1743503405329</td></tr><tr><td style=\"text-align:left;\">spark.dynamicAllocation.enabled</td><td>false</td></tr><tr><td style=\"text-align:left;\">spark.fs.azure.sas.uco-user.madsstorage002.blob.core.windows.net</td><td>\"sp=racwdl&st=2024-09-19T08:00:18Z&se=2025-09-19T16:00:18Z&spr=https&sv=2022-11-02&sr=c&sig=qtg6fCdoFz6k3EJLw7dA8D3D8wN0neAYw8yG4z4Lw2o%3D\"</td></tr><tr><td style=\"text-align:left;\">spark.kubernetes.driver.pod.name</td><td>spark-master-driver</td></tr><tr><td style=\"text-align:left;\">spark.kubernetes.namespace</td><td>dew59</td></tr><tr><td style=\"text-align:left;\">spark.fs.azure.sas.campus-user.madsstorage002.blob.core.windows.net</td><td>\"sp=racwdl&st=2024-09-19T08:03:31Z&se=2025-09-19T16:03:31Z&spr=https&sv=2022-11-02&sr=c&sig=kMP%2BsBsRzdVVR8rrg%2BNbDhkRBNs6Q98kYY695XMRFDU%3D\"</td></tr><tr><td style=\"text-align:left;\">spark.kubernetes.container.image.pullPolicy</td><td>IfNotPresent</td></tr><tr><td style=\"text-align:left;\">spark.driver.memory</td><td>1g</td></tr><tr><td style=\"text-align:left;\">spark.app.id</td><td>spark-c79f120d4aa14c8fa57ebde5ec27df04</td></tr><tr><td style=\"text-align:left;\">spark.driver.extraJavaOptions</td><td>-Djava.net.preferIPv6Addresses=false -XX:+IgnoreUnrecognizedVMOptions --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.nio.cs=ALL-UNNAMED --add-opens=java.base/sun.security.action=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED -Djdk.reflect.useDirectMethodHandle=false -Dderby.system.home=/tmp/dew59/spark/</td></tr><tr><td style=\"text-align:left;\">fs.azure.sas.campus-user.madsstorage002.blob.core.windows.net</td><td>sp=racwdl&st=2024-09-19T08:03:31Z&se=2025-09-19T16:03:31Z&spr=https&sv=2022-11-02&sr=c&sig=kMP%2BsBsRzdVVR8rrg%2BNbDhkRBNs6Q98kYY695XMRFDU%3D</td></tr><tr><td style=\"text-align:left;\">spark.executor.memory</td><td>1g</td></tr><tr><td style=\"text-align:left;\">spark.executor.instances</td><td>2</td></tr><tr><td style=\"text-align:left;\">spark.kubernetes.executor.podNamePrefix</td><td>dew59-notebook-7c426395f0e6b438</td></tr><tr><td style=\"text-align:left;\">spark.serializer.objectStreamReset</td><td>100</td></tr><tr><td style=\"text-align:left;\">spark.driver.maxResultSize</td><td>0</td></tr><tr><td style=\"text-align:left;\">spark.submit.deployMode</td><td>client</td></tr><tr><td style=\"text-align:left;\">spark.app.submitTime</td><td>1743503405207</td></tr><tr><td style=\"text-align:left;\">spark.master</td><td>k8s://https://kubernetes.default.svc.cluster.local:443</td></tr><tr><td style=\"text-align:left;\">spark.fs.azure</td><td>org.apache.hadoop.fs.azure.NativeAzureFileSystem</td></tr><tr><td style=\"text-align:left;\">spark.app.name</td><td>dew59 (notebook)</td></tr><tr><td style=\"text-align:left;\">spark.memory.fraction</td><td>0.1</td></tr><tr><td style=\"text-align:left;\">spark.executor.id</td><td>driver</td></tr><tr><td style=\"text-align:left;\">spark.driver.port</td><td>7078</td></tr><tr><td style=\"text-align:left;\">spark.kubernetes.memoryOverheadFactor</td><td>0.3</td></tr><tr><td style=\"text-align:left;\">spark.driver.host</td><td>spark-master-svc</td></tr><tr><td style=\"text-align:left;\">spark.ui.port</td><td>${env:SPARK_UI_PORT}</td></tr><tr><td style=\"text-align:left;\">spark.kubernetes.container.image</td><td>madsregistry001.azurecr.io/hadoop-spark:v3.3.5-openjdk-8</td></tr><tr><td style=\"text-align:left;\">spark.kubernetes.executor.podTemplateFile</td><td>/opt/spark/conf/executor-pod-template.yaml</td></tr><tr><td style=\"text-align:left;\">spark.rdd.compress</td><td>True</td></tr><tr><td style=\"text-align:left;\">spark.executor.extraJavaOptions</td><td>-Djava.net.preferIPv6Addresses=false -XX:+IgnoreUnrecognizedVMOptions --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.nio.cs=ALL-UNNAMED --add-opens=java.base/sun.security.action=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED -Djdk.reflect.useDirectMethodHandle=false</td></tr><tr><td style=\"text-align:left;\">spark.cores.max</td><td>2</td></tr><tr><td style=\"text-align:left;\">spark.submit.pyFiles</td><td></td></tr><tr><td style=\"text-align:left;\">spark.executor.cores</td><td>1</td></tr><tr><td style=\"text-align:left;\">spark.sql.shuffle.partitions</td><td>8</td></tr><tr><td style=\"text-align:left;\">spark.ui.showConsoleProgress</td><td>true</td></tr><tr><td style=\"text-align:left;\">spark.kubernetes.executor.container.image</td><td>madsregistry001.azurecr.io/hadoop-spark:v3.3.5-openjdk-8-1.0.02</td></tr></table><p><b>Notes</b></p><ul><li>The spark session <code>spark</code> and spark context <code>sc</code> global variables have been defined by <code>start_spark()</code>.</li><li>Please run <code>stop_spark()</code> before closing the notebook or restarting the kernel or kill <code>dew59 (notebook)</code> by hand using the link in the Spark UI.</li></ul>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run this cell to start a spark session in this notebook\n",
-    "\n",
-    "#start_spark(executor_instances=2, executor_cores=1, worker_memory=1, master_memory=1)"
+    "#start_spark(executor_instances=2, executor_cores=1, worker_memory=1, master_memory=1)\n",
+    "#this file is treated as a headerfile and included in otehr jbooks call start after the file is included"
    ]
   }
  ],
