01 in progress, about to write

--- a/notebooks/00_ghcn2_setup.ipynb
+++ b/notebooks/00_ghcn2_setup.ipynb
@@ -67,10 +67,9 @@
     "import pyspark\n",
     "import random\n",
     "import re\n",
-    "\n",
     "from IPython.display import display, HTML\n",
     "from pyspark import SparkContext\n",
-    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql import SparkSession, DataFrame\n",
     "\n",
     "\n",
     "# Constants used to interact with Azure Blob Storage using the hdfs command or Spark\n",
@@ -247,7 +246,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "46817cd2-d6d0-49b4-a97a-21881d5bb3e1",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# CELL 1: my common definitions  \n",
@@ -269,7 +272,9 @@
     "        print(\"bool = 1\")\n",
     "        dprintf(1, f\"hprintf: show top {n} rows\")\n",
     "        df.printSchema()\n",
-    "        #df.limit(n).show(truncate=False)\n",
+    "        #df.limit(n).show(truncate=False)        \n",
+    "        count =  df.count()\n",
+    "        dprintf(1, f\"result.count() = {count}\")\n",
     "        display(df.limit(n).toPandas())\n",
     "    else:\n",
     "        print(\"bool = 0\")\n",
@@ -286,8 +291,6 @@
     "            stop = time.time()\n",
     "            hprintf(1, result, show)\n",
     "            dprintf(1, f\"completed in {stop - start:.2f} seconds\")\n",
-    "            count =  result.count()\n",
-    "            dprintf(1, f\"result.count() = {count}\")\n",
     "            return result\n",
     "        else:\n",
     "            dprintf(1, f\"bool = 0, read NO file from: {path}\")\n",
@@ -334,6 +337,10 @@
     "        print(\"❌ Error caught:\", type(e), e)\n",
     "        traceback.print_exc()\n",
     "        return None\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -360,34 +367,49 @@
     "\n",
     "def hprintf(b: bool, df, n=5):\n",
     "    \"\"\"Conditional print of top rows in Spark DataFrame (safe for large datasets)\"\"\"\n",
-    "    dprintf(1, \"hprintf start\")\n",
-    "    if b:\n",
-    "        dprintf(1, f\"hprintf: show top {n} rows\")\n",
-    "        df.printSchema()\n",
-    "        display(df.limit(n).toPandas())  # safe in Jupyter only\n",
-    "    else:\n",
-    "        print(\"bool = 0\")\n",
-    "    dprintf(1, \"hprintf end\")\n",
-    "\n",
-    "def dReadTEXT(b: bool, path: str):\n",
     "    try:\n",
-    "        dprintf(1, f\"path: {path}\")\n",
+    "        dprintf(1, \"hprintf start\")\n",
+    "        if not df:\n",
+    "            raise ValueError(\"❌ DataFrame is None\")\n",
     "        if b:\n",
-    "            dprintf(1, f\"bool = 1, read file from: {path}\")\n",
-    "            start = time.time()\n",
-    "            result = spark.read.text(path)\n",
-    "            stop = time.time()\n",
-    "            hprintf(1, result)\n",
-    "            dprintf(1, f\"completed in {stop - start:.2f} seconds\")\n",
-    "            dprintf(1, f\"result.count() = {result.count()}\")\n",
-    "            return result\n",
+    "            dprintf(1, f\"hprintf: show top {n} rows\")\n",
+    "            df.printSchema()\n",
+    "            count = df.count()\n",
+    "            dprintf(1, f\"result.count() = {count}\")\n",
+    "            display(df.limit(n).toPandas())\n",
     "        else:\n",
+    "            print(\"bool = 0\")\n",
+    "        dprintf(1, \"hprintf end\")\n",
+    "    except Exception as e:\n",
+    "        print(\"❌ Error caught in hprintf:\", type(e), e)\n",
+    "        traceback.print_exc()\n",
+    "\n",
+    "\n",
+    "def dReadTEXT(b: bool, path: str, show: int = 5):\n",
+    "    try:\n",
+    "        if not b:\n",
     "            dprintf(1, f\"bool = 0, read NO file from: {path}\")\n",
     "            return None\n",
+    "\n",
+    "        dprintf(1, f\"filename: {path}\")\n",
+    "        start = time.time()\n",
+    "        result = spark.read.text(path)\n",
+    "        stop = time.time()\n",
+    "\n",
+    "        if result is None:\n",
+    "            raise Exception(\"❌ spark.read.text() returned None\")\n",
+    "\n",
+    "        hprintf(1, result, show)\n",
+    "        dprintf(1, f\"completed in {stop - start:.2f} seconds\")\n",
+    "        dprintf(1, f\"result.count() = {result.count()}\")\n",
+    "        return result\n",
+    "\n",
     "    except Exception as e:\n",
     "        print(\"❌ Error caught:\", type(e), e)\n",
     "        traceback.print_exc()\n",
     "        return None\n",
+    "\n",
+    "\n",
     "\n",
     "def dReadCSV(b: bool = 1, path: str = \"\", bHeader: bool = False, schema: StructType = None, show: int = 5):\n",
     "    try:\n",
@@ -419,7 +441,36 @@
     "    except Exception as e:\n",
     "        print(\"❌ Error caught:\", type(e), e)\n",
     "        traceback.print_exc()\n",
-    "        return None\n"
+    "        return None\n",
+    "\n",
+    "\n",
+    "def dWritePQ(b: bool = 1, path: str = \"\", df: DataFrame = None, show: int = 5):\n",
+    "    try:\n",
+    "        dprintf(1, f\"dWritePQ: path = {path}\")\n",
+    "        \n",
+    "        if df is None:\n",
+    "            raise ValueError(\"❌ DataFrame is None — cannot write to Parquet.\")\n",
+    "\n",
+    "        if b:\n",
+    "            dprintf(1, \"Preview before write:\")\n",
+    "            hprintf(1, df, show)\n",
+    "\n",
+    "            start = time.time()\n",
+    "            df.write.mode(\"overwrite\").parquet(path)            \n",
+    "            stop = time.time()\n",
+    "\n",
+    "            dprintf(1, f\"✅ Write complete in {stop - start:.2f} seconds\")\n",
+    "            dprintf(1, f\"📦 Rows written: {df.count()}\")\n",
+    "            return True\n",
+    "\n",
+    "        else:\n",
+    "            dprintf(1, f\"⚠️  b = 0 — write to {path} skipped\")\n",
+    "            return False\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(\"❌ Error caught during dWritePQ:\", type(e), e)\n",
+    "        traceback.print_exc()\n",
+    "        return False\n"
    ]
   },
   {
