saving and on to the other tasks

--- a/notebooks/00_ghcn2_setup.ipynb
+++ b/notebooks/00_ghcn2_setup.ipynb
@@ -67,13 +67,19 @@
     "import pyspark\n",
     "import random\n",
     "import re\n",
-    "from IPython.display import display, HTML\n",
-    "from pyspark import SparkContext\n",
-    "from pyspark.sql import SparkSession, DataFrame\n",
     "\n",
+    "from IPython.display import display, HTML\n",
+    "import traceback\n",
+    "import time\n",
+    "from pyspark.sql.types import StructType\n",
+    "from pyspark.sql.functions import col, length, trim\n",
+    "from pyspark.sql import SparkSession, DataFrame\n",
+    "from pyspark import SparkContext\n",
+    "\n",
+    "import traceback\n",
+    "import time\n",
     "\n",
     "# Constants used to interact with Azure Blob Storage using the hdfs command or Spark\n",
-    "\n",
     "global username\n",
     "\n",
     "username = re.sub('@.*', '', getpass.getuser())\n",
@@ -245,118 +251,20 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "46817cd2-d6d0-49b4-a97a-21881d5bb3e1",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# CELL 1: my common definitions  \n",
-    "# CELL 1: \n",
-    "# ------------------------------------------------\n",
-    "import traceback \n",
-    "\n",
-    "DEEBUG = True  #override at any point in the cells\n",
-    "\n",
-    "def dprintf(b: bool, s: str):\n",
-    "    \"\"\"Conditional print of str\"\"\"\n",
-    "    if b:\n",
-    "        print(s)\n",
-    "\n",
-    "def hprintf(b: bool, df, n=5):\n",
-    "    \"\"\"Conditional print of top rows in Spark DataFrame (safe for large datasets)\"\"\"\n",
-    "    dprintf(1,\"hprintf start\")\n",
-    "    if b:            \n",
-    "        print(\"bool = 1\")\n",
-    "        dprintf(1, f\"hprintf: show top {n} rows\")\n",
-    "        df.printSchema()\n",
-    "        #df.limit(n).show(truncate=False)        \n",
-    "        count =  df.count()\n",
-    "        dprintf(1, f\"result.count() = {count}\")\n",
-    "        display(df.limit(n).toPandas())\n",
-    "    else:\n",
-    "        print(\"bool = 0\")\n",
-    "    dprintf(1,\"hprintf end\")\n",
-    "\n",
-    "\n",
-    "def dReadTEXT(b: bool, path: str, show: int = 5):\n",
-    "    try:\n",
-    "        \n",
-    "        if b:\n",
-    "            dprintf(1, f\"bool = 1, read file from: {path}\")\n",
-    "            start = time.time()\n",
-    "            result = spark.read.text(path)\n",
-    "            stop = time.time()\n",
-    "            hprintf(1, result, show)\n",
-    "            dprintf(1, f\"completed in {stop - start:.2f} seconds\")\n",
-    "            return result\n",
-    "        else:\n",
-    "            dprintf(1, f\"bool = 0, read NO file from: {path}\")\n",
-    "            return None\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(\"❌ Error caught:\", type(e), e)\n",
-    "        traceback.print_exc()\n",
-    "        return None\n",
-    "\n",
-    "\n",
-    "from pyspark.sql.types import StructType\n",
-    "\n",
-    "def dReadCSV(b: bool = 1, path: str = \"\", bHeader: bool = False, schema: StructType = None, show: int = 5):\n",
-    "    try:\n",
-    "  \n",
-    "       \n",
-    "        if schema:\n",
-    "            dprintf(1, f\"schema: {schema.simpleString()}\")\n",
-    "        else:\n",
-    "            dprintf(1, \"no schema\")\n",
-    "\n",
-    "        if b:\n",
-    "            dprintf(1, f\"bool = 1, read file from: {path}\")\n",
-    "            start = time.time()\n",
-    "            result = spark.read \\\n",
-    "                .option(\"header\", bool(bHeader)) \\\n",
-    "                .schema(schema) \\\n",
-    "                .csv(path) \\\n",
-    "                .repartition(8)  # leave this for now\n",
-    "\n",
-    "            stop = time.time()\n",
-    "            dprintf(1, f\"complete in {stop - start:.2f} seconds\")\n",
-    "            hprintf(1, result, show)\n",
-    "            count = result.count()\n",
-    "            dprintf(1, f\"result.count() = {count}\")\n",
-    "            return result\n",
-    "\n",
-    "        else:\n",
-    "            dprintf(1, f\"bool = 1, read NO file from: {path}\")\n",
-    "            return None\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(\"❌ Error caught:\", type(e), e)\n",
-    "        traceback.print_exc()\n",
-    "        return None\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "cda12fa7-d929-468c-bccd-26118ef34429",
+   "id": "717cf8b7-bc2d-4006-bbbf-70c9d250ca2c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# CELL 1: my common definitions  \n",
     "# CELL 1: \n",
     "# ------------------------------------------------\n",
-    "import traceback\n",
-    "import time\n",
-    "from pyspark.sql.types import StructType\n",
+    "# Summary:\n",
+    "# - Define dprintf and hprintf for conditional diagnostics\n",
+    "# - Define dReadTEXT and dReadCSV for loading text/CSV files with diagnostics\n",
+    "# - Define dWritePQ to write DataFrame to Parquet with diagnostics\n",
+    "# - Define countNonEmpty to count rows with values in a column\n",
+    "\n",
+    "\n",
     "\n",
     "DEEBUG = True  # override at any point in the cells\n",
     "\n",
@@ -384,8 +292,7 @@
     "        print(\"❌ Error caught in hprintf:\", type(e), e)\n",
     "        traceback.print_exc()\n",
     "\n",
-    "\n",
-    "def dReadTEXT(b: bool, path: str, show: int = 5):\n",
+    "def dReadTEXT(b: bool, path: str, show: int = 5) -> DataFrame:\n",
     "    try:\n",
     "        if not b:\n",
     "            dprintf(1, f\"bool = 0, read NO file from: {path}\")\n",
@@ -409,9 +316,7 @@
     "        traceback.print_exc()\n",
     "        return None\n",
     "\n",
-    "\n",
-    "\n",
-    "def dReadCSV(b: bool = 1, path: str = \"\", bHeader: bool = False, schema: StructType = None, show: int = 5):\n",
+    "def dReadCSV(b: bool = 1, path: str = \"\", bHeader: bool = False, schema: StructType = None, show: int = 5) -> DataFrame:\n",
     "    try:\n",
     "        dprintf(1, f\"path: {path}\")\n",
     "\n",
@@ -443,11 +348,10 @@
     "        traceback.print_exc()\n",
     "        return None\n",
     "\n",
-    "\n",
     "def dWritePQ(b: bool = 1, path: str = \"\", df: DataFrame = None, show: int = 5):\n",
     "    try:\n",
     "        dprintf(1, f\"dWritePQ: path = {path}\")\n",
-    "        \n",
+    "\n",
     "        if df is None:\n",
     "            raise ValueError(\"❌ DataFrame is None — cannot write to Parquet.\")\n",
     "\n",
@@ -456,7 +360,7 @@
     "            hprintf(1, df, show)\n",
     "\n",
     "            start = time.time()\n",
-    "            df.write.mode(\"overwrite\").parquet(path)            \n",
+    "            df.write.mode(\"overwrite\").parquet(path)\n",
     "            stop = time.time()\n",
     "\n",
     "            dprintf(1, f\"✅ Write complete in {stop - start:.2f} seconds\")\n",
@@ -470,12 +374,24 @@
     "    except Exception as e:\n",
     "        print(\"❌ Error caught during dWritePQ:\", type(e), e)\n",
     "        traceback.print_exc()\n",
-    "        return False\n"
+    "        return False\n",
+    "\n",
+    "def countNonEmpty(df: DataFrame, columnName: str) -> int:\n",
+    "    try:\n",
+    "        count = df.filter(\n",
+    "            (col(columnName).isNotNull()) & (length(trim(col(columnName))) > 0)\n",
+    "        ).count()\n",
+    "        return count\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error in countNonEmpty('{columnName}'):\", type(e), e)\n",
+    "        traceback.print_exc()\n",
+    "        return -1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f06343f5-a638-4f7f-ade5-5f564a068bc0",
    "metadata": {},
    "outputs": [],
