--- a/notebooks/01_ghcn2_explore.ipynb
+++ b/notebooks/01_ghcn2_explore.ipynb
@@ -2364,14 +2364,14 @@
     }
    ],
    "source": [
-    "enrichedStation1  = stationsdf.join(\n",
+    "temp1MD  = stationsdf.join(\n",
     "    countriesdf,\n",
     "    stationsdf[\"COUNTRYCODE\"] == countriesdf[\"CODE\"],\n",
     "    \"left\"\n",
     ").drop(\"CODE\").withColumnRenamed(\"NAME\",\"COUNTRYNAME\")\n",
     "\n",
-    "dprintf(1, \"enrichedStation1 (after join with countriesdf)\")\n",
-    "hprintf(DEEBUG, enrichedStation1)"
+    "dprintf(1, \"temp1MD (after join with countriesdf)\")\n",
+    "hprintf(DEEBUG, temp1MD)"
    ]
   },
   {
@@ -2631,8 +2631,8 @@
    "source": [
     "# Join 2: Add STATENAME from statesdf\n",
     "\n",
-    "dprintf(1, \"enrichedStation1 (before join with statesdf)\")\n",
-    "hprintf(DEEBUG, enrichedStation1)\n",
+    "dprintf(1, \"temp1MD (before join with statesdf)\")\n",
+    "hprintf(DEEBUG, temp1MD)\n",
     "\n",
     "dprintf(1, \"statesdf (used for join)\")\n",
     "hprintf(DEEBUG, statesdf)"
@@ -2977,17 +2977,17 @@
     }
    ],
    "source": [
-    "dprintf(1, \"enrichedStation1 (before join with statesdf)\")\n",
-    "hprintf(DEEBUG, enrichedStation1)\n",
+    "dprintf(1, \"temp1MD (before join with statesdf)\")\n",
+    "hprintf(DEEBUG, temp1MD)\n",
     "\n",
-    "enrichedStation2 = enrichedStation1.join(\n",
+    "stationMetadata = temp1MD.join(\n",
     "    statesdf,\n",
-    "    enrichedStation1[\"STATE\"] == statesdf[\"CODE\"],\n",
+    "    temp1MD[\"STATE\"] == statesdf[\"CODE\"],\n",
     "    \"left\"\n",
     ").drop(\"CODE\").withColumnRenamed(\"NAME\",\"STATENAME\")\n",
     "\n",
-    "dprintf(1, \"enrichedStation2 (after join with statesdf)\")\n",
-    "hprintf(DEEBUG, enrichedStation2)"
+    "dprintf(1, \"stationMetadata (after join with statesdf)\")\n",
+    "hprintf(DEEBUG, stationMetadata)"
    ]
   },
   {
@@ -3494,8 +3494,8 @@
    ],
    "source": [
     "\n",
-    "dprintf(1, \"enrichedStation2 (after join with statesdf)\")\n",
-    "hprintf(DEEBUG, enrichedStation2)\n",
+    "dprintf(1, \"stationMetadata (after join with statesdf)\")\n",
+    "hprintf(DEEBUG, stationMetadata)\n",
     "\n",
     "\n",
     "cols = [\"ID\", \"LATITUDE\", \"LONGITUDE\", \"ELEVATION\", \"STATE\", \"STATIONNAME\",\n",
@@ -3506,7 +3506,7 @@
     "\n",
     "# Loop through and collect counts\n",
     "for colname in cols:\n",
-    "    count = countNonEmpty(enrichedStation2, colname)\n",
+    "    count = countNonEmpty(stationMetadata, colname)\n",
     "    results.append(Row(COLUMN=colname, COUNT=count))\n",
     "\n",
     "# Convert list of Rows to DataFrame\n",
@@ -3644,7 +3644,7 @@
     "#  \n",
     "#  \n",
     "\n",
-    "displaydf = enrichedStation2.select(\"ID\", \"COUNTRYCODE\", \"COUNTRYNAME\")\\\n",
+    "displaydf = stationMetadata.select(\"ID\", \"COUNTRYCODE\", \"COUNTRYNAME\")\\\n",
     "            .dropDuplicates([\"COUNTRYCODE\"])\n",
     "dprintf(1, \"Display of station ID, country code, and country name\")\n",
     "hprintf(1, displaydf)\n"
@@ -3652,10 +3652,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "1dcfd889",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'stationsEnricheddf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 12\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# CELL 9 Q3(C): Extract State Name from Enriched Metadata  \u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# CELL 9 Q3(C): \u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# ------------------------------------------------\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m#  \u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m#  \u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m usStationsdf \u001b[38;5;241m=\u001b[39m \u001b[43mstationsEnricheddf\u001b[49m\u001b[38;5;241m.\u001b[39mfilter(F\u001b[38;5;241m.\u001b[39mcol(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCOUNTRYCODE\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUS\u001b[39m\u001b[38;5;124m\"\u001b[39m) \\\n\u001b[1;32m     13\u001b[0m                 \u001b[38;5;241m.\u001b[39mselect(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mID\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSTATECODE\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSTATENAME\u001b[39m\u001b[38;5;124m\"\u001b[39m) \\\n\u001b[1;32m     14\u001b[0m                 \u001b[38;5;241m.\u001b[39mdropDuplicates([\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSTATECODE\u001b[39m\u001b[38;5;124m\"\u001b[39m]) \\\n\u001b[1;32m     17\u001b[0m dprintf(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSelect and inspect STATE and STATENAME columns\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     18\u001b[0m hprintf(\u001b[38;5;241m1\u001b[39m, usStationsdf,\u001b[38;5;241m51\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'stationsEnricheddf' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# CELL 9 Q3(C): Extract State Name from Enriched Metadata  \n",
     "# CELL 9 Q3(C): \n",
@@ -3668,10 +3680,14 @@
     "\n",
     "#  \n",
     "#  \n",
+    "usStationsdf = stationsEnricheddf.filter(F.col(\"COUNTRYCODE\") == \"US\") \\\n",
+    "                .select(\"ID\", \"STATECODE\", \"STATENAME\") \\\n",
+    "                .dropDuplicates([\"STATECODE\"]) \\\n",
     "\n",
-    "dprintf(1, \"stationsEnricheddf – state mapping\")\n",
-    "hprintf(1, stationsEnricheddf.select(\"ID\", \"STATE\", \"STATENAME\").show(5))\n",
-    "dprintf(1, f\"stationsEnricheddf.count() = {stationsEnricheddf.count()}\")\n"
+    "\n",
+    "dprintf(1, \"Select and inspect STATE and STATENAME columns\")\n",
+    "hprintf(1, usStationsdf,51)\n",
+    "\n"
    ]
   },
   {
