finally the begining of analysis deebug

--- a/notebooks/01_ghcn2_explore.ipynb
+++ b/notebooks/01_ghcn2_explore.ipynb
@@ -5771,10 +5771,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "fb6807c3-951e-4ad6-bbc2-d67c6d34c4f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "25/04/06 21:02:17 WARN ExecutorPodsWatchSnapshotSource: Kubernetes client has been closed.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<p><b>Spark</b></p><p>The spark session is <b><span style=\"color:red\">stopped</span></b>, confirm that <code>dew59 (notebook)</code> is under the completed applications section in the Spark UI.</p><ul><li><a href=\"http://mathmadslinux2p.canterbury.ac.nz:8080/\" target=\"_blank\">Spark UI</a></li></ul>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "stop_spark()"
    ]
